# backend/community/models/__init__.py
@@ -30,7 +30,7 @@ from community.models.content import (
     WhatsAppConfig,
 )
 from community.models.document import DocFolder, Document
-from community.models.event import Event, EventFlag, EventRSVP
+from community.models.event import Event, EventEmailBlast, EventFlag, EventRSVP
 from community.models.join_form import JoinFormQuestion, JoinRequest
 from community.models.poll import EventPoll, PollOption, PollVote
 from community.models.survey import (
@@ -70,6 +70,7 @@ __all__ = [
     "Document",
     # event
     "Event",
+    "EventEmailBlast",
     "EventFlag",
     "EventRSVP",
     # join form
